--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "animate-css-grid": "^1.5.1",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "framer-motion": "^10.11.2",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.2.0",
-    "react-simple-typewriter": "^5.0.1"
+    "react-dotenv": "^0.1.3",
+    "react-ga4": "^2.1.0",
+    "react-scripts": "^5.0.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
