--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jawadesign-project-client",
   "private": true,
   "version": "1.0.0",
-  "homepage": "https://test.jawa-design.com",
+  "homepage": "https://www.jawa-design.com",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-ga4": "^2.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^9.1.3"
